--- a/eda.ipynb
+++ b/eda.ipynb
@@ -15,7 +15,7 @@
     "Welcome to this competition on predicting **Cervical Spine Fractures** from **Computed Tomography (CT) scans**. The **motivation** to use AI for this task is that a **quick** diagnosis can **reduce** the chance of **neurologic deterioration** and paralysis after trauma.\n",
     "\n",
     "<center>\n",
-    "<img src=\"https://www.holisticbodyworks.com.au/wp-content/uploads/2018/05/Thoracic-Spine.jpg\" width=400>\n",
+    "<img src=\"images/eda_1.jpeg\" width=400>\n",
     "</center>\n",
     "\n",
     "**Dataset origin**\n",
