--- a/eda.ipynb
+++ b/eda.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "<center>\n",
     "<img src=\"/images/eda_1.jpeg\" width=400>\n",
+    "![eda_1](images/eda_1.jpeg)",
     "</center>\n",
     "\n",
     "**Dataset origin**\n",
