--- a/eda.ipynb
+++ b/eda.ipynb
@@ -15,7 +15,7 @@
     "Welcome to this competition on predicting **Cervical Spine Fractures** from **Computed Tomography (CT) scans**. The **motivation** to use AI for this task is that a **quick** diagnosis can **reduce** the chance of **neurologic deterioration** and paralysis after trauma.\n",
     "\n",
     "<center>\n",
-    "<img src=\"images/eda_1.jpeg\" width=400 alt=\"eda_1\">\n",
+    "<img src=\"https://user-images.githubusercontent.com/49610834/221354113-a5f6d4d6-8279-4215-8419-183225b969ae.jpeg\" width=400>\n",
     "</center>\n",
     "\n",
     "**Dataset origin**\n",
@@ -54,7 +54,7 @@
     "\n",
     "<br>\n",
     "<center>\n",
-    "<img src=\"images/eda_2.png\" width=600>\n",
+    "<img src=\"https://user-images.githubusercontent.com/49610834/221354126-03b39182-2204-4b1a-b72b-9ac92f79d2eb.png\" width=600>\n",
     "</center>\n",
     "<br>"
    ]
@@ -72,7 +72,7 @@
     "Below is a table going through an example of **how the evaluation metric is calculated** for a single case id. This would then be **averaged** across all case id's.\n",
     "\n",
     "<center>\n",
-    "<img src=\"images/eda_3.jpeg\" width=750>\n",
+    "<img src=\"https://user-images.githubusercontent.com/49610834/221354133-97e08949-df04-41c5-b355-466c6481c223.jpeg\" width=750>\n",
     "</center>\n",
     "\n",
     "Note: it is convention to use the **natural logarithm** (base e) for calculating the log loss. \n",
